# SPDX-License-Identifier: BSD-3-Clause
# Copyright 2022, Intel Corporation

manpages_7_md += files(
    'libpmemset.7.md',
    )

manpages_5_md += files(
    )

manpages_3_md += files(
	'pmemset_errormsg.3.md',
	'pmemset_perror.3.md',
	'pmemset_config_new.3.md',
	'pmemset_source_from_pmem2.3.md',
	'pmemset_new.3.md',
	'pmemset_source_from_file.3.md',
	'pmemset_source_delete.3.md',
	'pmemset_map_config_new.3.md',
	'pmemset_config_set_required_store_granularity.3.md',
	'pmemset_map.3.md',
	'pmemset_first_part_map.3.md',
	'pmemset_descriptor_part_map.3.md',
	'pmemset_get_store_granularity.3.md',
	'pmemset_part_map_drop.3.md',
	'pmemset_part_map_by_address.3.md',
	'pmemset_persist.3.md',
	'pmemset_flush.3.md',
	'pmemset_drain.3.md',
	'pmemset_set_contiguous_part_coalescing.3.md',
	'pmemset_memmove.3.md',
	'pmemset_remove_part_map.3.md',
	'pmemset_deep_flush.3.md',
	'pmemset_source_from_temporary.3.md',
	'pmemset_remove_range.3.md',
	'pmemset_config_set_event_callback.3.md',
	'pmemset_config_set_reservation.3.md',
	'pmemset_map_config_set_length.3.md',
	'pmemset_map_config_set_offset.3.md',
	'pmemset_config_set_acceptable_states.3.md',
	'pmemset_source_set_sds.3.md',
	'pmemset_source_pread_mcsafe.3.md',
	'pmemset_source_alignment.3.md',
    )

manpages_1_md += files(
    )

manpages_3_dummy += files(
    'pmemset_config_delete.3',
    'pmemset_delete.3',
    'pmemset_next_part_map.3',
    'pmemset_memcpy.3',
    'pmemset_memset.3',
    'pmemset_xsource_from_file.3',
    'pmemset_map_config_delete.3',
    'pmemset_source_pwrite_mcsafe.3',
    )