manpages_7_md += files(
    'librpmem.7.md',
    )

manpages_5_md += files(
    )

manpages_3_md += files(
    'rpmem_create.3.md',
    'rpmem_persist.3.md',
    )

manpages_1_md += files(
    )

manpages_3_dummy += files(
    'rpmem_open.3',
    'rpmem_set_attr.3',
    'rpmem_close.3',
    'rpmem_read.3',
    'rpmem_remove.3',
    'rpmem_check_version.3',
    'rpmem_errormsg.3',
    'rpmem_deep_persist.3',
    'rpmem_flush.3',
    'rpmem_drain.3',
    )