manpages_7_md += files(
    )

manpages_5_md += files(
    )

manpages_3_md += files(
    )

manpages_1_md += files(
    'pmempool.1.md',
    'pmempool-info.1.md',
    'pmempool-create.1.md',
    'pmempool-convert.1.md',
    'pmempool-sync.1.md',
    'pmempool-transform.1.md',
    'pmempool-feature.1.md',
    )

manpages_3_dummy += files(
    )